# paceval

./: .gitattributes  .gitignore  LICENSE  Local paceval sources external documentation.html  README.md  Web Application Programming Interface [API] paceval.url  Web How-to-use-AppCalculation Demo.url  Web Latest Software Development Kit [SDK] paceval.url  Web www.paceval.com.url  paceval-server.js  paceval_release-content.txt
.github/workflows/: codeql-analysis.yml  docker-build-paceval-api-service.yaml  docker-build-paceval-computation-service.yaml  docker-build-paceval-demo-service.yaml  docker-build-paceval-k8s-operator.yaml  docker-build-pcavel-computation-service.yaml  docker-build.yaml
SwaggerHub-paceval-service/: swagger.yaml
_released/_Installer 4.04a Software Development Kit/: paceval_release-content.txt
examples_sources/Python_examples/paceval-4.25.4/: LICENSE  pyproject.toml  readme.md
examples_sources/Python_examples/paceval-4.25.4/paceval.egg-info/: PKG-INFO
examples_sources/Python_examples/paceval-4.25.4/src/: paceval.py
examples_sources/Python_examples/paceval-4.25.4/src/paceval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
paceval and artificial intelligence/: Faces-large_net.ipynb  Fashion-small_net.ipynb  Skin_Cancer-mid_net.ipynb  readme.md
paceval in hardware/: readme.md
paceval on a usb stick/: readme.md
paceval_sources_documentation-external/: readme.md
swagger diafanis-service (Eclipse Diafanis)/: README.md  swagger.yaml
swagger paceval-service/: README.md  swagger.yaml
swagger paceval-service-cloud/: swagger.yaml
(+4277 files in other folders)
